<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rugged.tuberculosisapp.information.QuizActivity">

    <TextView
        android:id="@+id/titleMedication"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/videoViewFragment" />

    <View
        android:id="@+id/quizDivider"
        style="@style/Divider"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMedication" />

    <fragment class="com.google.android.youtube.player.YouTubePlayerFragment"
        android:id="@+id/videoViewFragment"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </fragment>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizDivider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/Question1"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/correct_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1A1"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/wrong_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1A2"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/wrong_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1A3"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
            </RadioGroup>

            <TextView android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/Question2"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/wrong_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
                <RadioButton android:id="@+id/correct_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
            </RadioGroup>

            <TextView android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/Question3"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/wrong_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q3A1"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
                <RadioButton android:id="@+id/wrong_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q3A2"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
                <RadioButton android:id="@+id/correct_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q3A3"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
            </RadioGroup>

            <TextView android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/Question4"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/wrong_answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q4A1"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
                <RadioButton android:id="@+id/wrong_answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q4A2"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
                <RadioButton android:id="@+id/wrong_answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q4A3"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
                <RadioButton android:id="@+id/correct_answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q4A4"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
                <RadioButton android:id="@+id/wrong_answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q4A5"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
                <RadioButton android:id="@+id/wrong_answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4A6"
                android:onClick="onRadioButtonClicked"
                tools:ignore="DuplicateIds" />
                <RadioButton android:id="@+id/wrong_answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q4A7"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateIds" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/show_answers"
        android:onClick="submitQuiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
