<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rugged.tuberculosisapp.MainActivity">
    <item
        android:id="@+id/action_test_reminder"
        android:orderInCategory="105"
        android:title= "@string/action_test_reminder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="110"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="111"
        android:title= "@string/action_sign_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/close_app"
        android:orderInCategory="112"
        android:title="@string/close_app"
        app:showAsAction="never" />
</menu>
