<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight=".3"
        android:adjustViewBounds="true"
        android:contentDescription="Pill Icon"
        app:srcCompat="@drawable/ic_medication" />

    <TextView
        android:id="@+id/medicationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:text="@string/medication_name_placeholder"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/medicationTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight=".5"
        android:text="@string/medication_time_placeholder"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/medicationDose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight=".6"
        android:text="@string/medication_dose_placeholder"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/takenCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>