<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rugged.tuberculosisapp.settings.LanguageSelect">

    <TextView
        android:id="@+id/titleLangSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_language_select"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/dutchFlag"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/description_dutch_flag"
        android:onClick="chooseLanguage"
        android:scaleType="centerCrop"
        android:tag="nl"
        app:layout_constraintEnd_toStartOf="@+id/englishFlag"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLangSelect"
        app:srcCompat="@drawable/dutchtemp" />

    <ImageButton
        android:id="@+id/englishFlag"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_english_flag"
        android:onClick="chooseLanguage"
        android:scaleType="centerCrop"
        android:tag="en"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dutchFlag"
        app:layout_constraintTop_toBottomOf="@+id/titleLangSelect"
        app:srcCompat="@drawable/engtemp" />

    <ImageButton
        android:id="@+id/germanFlag"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description_german_flag"
        android:onClick="chooseLanguage"
        android:scaleType="centerCrop"
        android:tag="de"
        app:layout_constraintEnd_toStartOf="@+id/romanianFlag"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dutchFlag"
        app:srcCompat="@drawable/gertemp" />

    <ImageButton
        android:id="@+id/romanianFlag"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description_romanian_flag"
        android:onClick="chooseLanguage"
        android:scaleType="centerCrop"
        android:tag="ro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/germanFlag"
        app:layout_constraintTop_toBottomOf="@+id/englishFlag"
        app:srcCompat="@drawable/romtemp" />

    <TextView
        android:id="@+id/title_nederlands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Nederlands"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/dutchFlag"
        app:layout_constraintStart_toStartOf="@+id/dutchFlag"
        app:layout_constraintTop_toBottomOf="@+id/dutchFlag" />

    <TextView
        android:id="@+id/title_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="English"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/englishFlag"
        app:layout_constraintStart_toStartOf="@+id/englishFlag"
        app:layout_constraintTop_toBottomOf="@+id/englishFlag" />

    <TextView
        android:id="@+id/title_deutsch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Deutsch"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/germanFlag"
        app:layout_constraintStart_toStartOf="@+id/germanFlag"
        app:layout_constraintTop_toBottomOf="@+id/germanFlag" />

    <TextView
        android:id="@+id/title_românesc"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Românesc"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/romanianFlag"
        app:layout_constraintStart_toStartOf="@+id/romanianFlag"
        app:layout_constraintTop_toBottomOf="@+id/romanianFlag" />

</android.support.constraint.ConstraintLayout>
