<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/titleAskedQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/asked_questions"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:id="@+id/infoDividerAskedQuestions"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:id="@+id/askedQuestions"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/titleAskQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ask_physician"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:id="@+id/infoDividerQuestion"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border">

            <EditText
                android:id="@+id/questionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ask_physician_hint"
                android:inputType="textMultiLine"
                android:singleLine="false" />
        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/submitQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/action_submit" />

    </LinearLayout>

</ScrollView>